Updated home page for site

--- a/Lab28/Lab28/Views/API/GetDeck.cshtml
+++ b/Lab28/Lab28/Views/API/GetDeck.cshtml
@@ -8,6 +8,6 @@
 <h2>Get a Deck of Cards</h2>
 
 <form action="~/API/ViewCards" method="post">
-    <input type="submit" placeholder="Draw 5 Cards" />
+    <input type="submit" placeholder="Draw 5 Cards" class="btn btn-primary"/>
 </form>
 
