--- a/Lab28/Lab28/Views/API/ViewCards.cshtml
+++ b/Lab28/Lab28/Views/API/ViewCards.cshtml
@@ -18,4 +18,4 @@
     </table>
 }
 
-    <a href="~/API/DrawMoreCards" class="btn">Draw 5 More Cards</a>
+<a href="~/API/DrawMoreCards" class="btn btn-primary">Draw 5 More Cards</a>
